# machikoro

./: README.md  environment.yml  machikoro.py  machikoro_actions.py  machikoro_state_space.py  machikoro_turn_states.py  pyproject.toml
src/: machikoro.py  machikoro_actions.py  machikoro_agent.py  machikoro_cards.py  machikoro_state_space.py  machikoro_turn_states.py
tests/: test_machikoro.py
